Fixed up ckanAuthenticationUrl being in the wrong place for dev.

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -54,6 +54,8 @@ csp:
   directives:
     scriptSrc:
     - "''self''"
+    - "''unsafe-inline''"
+    - browser-update.org
     objectSrc:
     - "''none''"
 
