--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -31,6 +31,7 @@ gateway:
   auth:
     facebookClientId: "173073926555600"
     googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
+    ckanAuthenticationUrl: https://data.gov.au/data
   cors:
     credentials: true
     origin: true
@@ -41,10 +42,10 @@ gateway:
       scriptSrc:
       - "''self''"
       - browser-update.org
+      - "''unsafe-inline''"
       objectSrc:
       - "''none''"
       reportUri: https://sdga.report-uri.com/r/d/csp/enforce
-  ckanAuthenticationUrl: https://data.gov.au/data
 
 combined-db:
   waleBackup:
