--- a/deploy/helm/magda/charts/combined-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/combined-db/templates/statefulset.yaml
@@ -22,6 +22,11 @@ spec:
 {{- if .Values.affinity }}
 {{ toYaml .Values.affinity | indent 8 }}
 {{- end }}
+      tolerations:
+      - key: "reservedFor"
+        operator: "Equal"
+        value: "statefulsets"
+        effect: "NoSchedule"
       containers:
       - name: combined-db
         resources:
