--- a/magda-migrator-authorization-db/package.json
+++ b/magda-migrator-authorization-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-authorization-db",
-  "version": "0.0.52-RC2",
+  "version": "0.0.52",
   "description": "The MAGDA database for storing users and other authorization data.",
   "license": "Apache-2.0",
   "scripts": {
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.52-RC2",
-    "@magda/scripts": "^0.0.52-RC2"
+    "@magda/db-migrator": "^0.0.52",
+    "@magda/scripts": "^0.0.52"
   },
   "magda": {
     "categories": {
