- fixed incompatible issues with offical docker images - removed x-pack - set auto_create_index to false - changed `minimum_master_nodes` in elasticsearch.yml to 1 (this should be overwrite via env `discovery.zen.minimum_master_nodes`)

--- a/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
@@ -95,8 +95,8 @@ spec:
           value: {{ .Values.data.pluginsInstall | quote }}
         - name: NETWORK_HOST
           value: "0.0.0.0"
-        - name: HTTP_ENABLE
-          value: "true"
+        - name: DISCOVERY_SERVICE
+          value: elasticsearch-discovery
 {{- if .Values.backup.googleApplicationCreds }}
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: "/var/{{ .Values.backup.googleApplicationCreds.secretName }}/{{ .Values.backup.googleApplicationCreds.fileName }}"
