--- a/deploy/helm/magda/charts/elasticsearch/templates/client-deployment.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/client-deployment.yml
@@ -55,6 +55,8 @@ spec:
           value: "false"
         - name: NODE_DATA
           value: "false"
+        - name: NODE_INGEST
+          value: "true"
         - name: HTTP_ENABLE
           value: "true"
         - name: ES_JAVA_OPTS
@@ -63,6 +65,8 @@ spec:
           value: {{ .Values.client.pluginsInstall | quote }}
         - name: NETWORK_HOST
           value: "0.0.0.0"
+        - name: DISCOVERY_SERVICE
+          value: elasticsearch-discovery
         ports:
         - containerPort: 9200
           name: http
