--- a/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
@@ -75,7 +75,7 @@ spec:
           value: "false"
         - name: HTTP_ENABLE
           value: "false"
-        - name: NUMBER_OF_MASTERS
+        - name: discovery.zen.minimum_master_nodes
           value: "2"
         - name: NODE_INGEST
           value: "false"
@@ -83,6 +83,8 @@ spec:
           value: {{ .Values.client.pluginsInstall | quote }}
         - name: NETWORK_HOST
           value: "0.0.0.0"
+        - name: DISCOVERY_SERVICE
+          value: elasticsearch-discovery
         ports:
         - containerPort: 9300
           name: transport
