--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -p tsconfig-build.json --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts --ckanUrl https://data.gov.au",
-    "dev-for-terria": "run-typescript-in-nodemon src/index.ts --ckanUrl https://data.gov.au --web http://localhost:3001 --proxyRoutesJson terria-map-proxy-routes.json --cspJson terria-map-csp.json",
+    "dev-for-terria": "run-typescript-in-nodemon src/index.ts --ckanUrl https://data.gov.au --web http://localhost:3001 --proxyRoutesJson terria-map-proxy-routes.json --cspJson terria-map-csp.json --externalUrl http://admin.terria.magda:6100",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
