--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -85,3 +85,17 @@ correspondence-api:
   alwaysSendToDefaultRecipient: true
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
+
+connectors:
+  config:
+    - image:
+        name: magda-ckan-connector
+      id: dga
+      name: data.gov.au
+      sourceUrl: https://data.gov.au/
+      pageSize: 1000
+      ignoreHarvestSources:
+        - "*"
+      ignoreOrganisationNames:
+        - "Bioregional Assessment Programme"
+        - "State of the Environment"
