--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -90,6 +90,8 @@ indexer:
 
 web-server:
   fallbackUrl: "https://data.gov.au"
+  featureFlags:
+    cataloguing: true
 
 correspondence-api:
   defaultRecipient: "magda-test@googlegroups.com"
