Gitlab: Pull image first & fix connect to gitlab registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,10 @@ buildtest:search-with-index-cache:
   retry: 2
   dependencies: []
   before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
     - docker info
     - apk update
     - apk upgrade
@@ -96,6 +100,7 @@ buildtest:search-with-index-cache:
     - heavy
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker pull $DOCKER_IMAGE
     - "cd magda-elastic-search; docker-compose up &; cd .."
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
     - sbt "intTest/testOnly au.csiro.data61.magda.api.*Spec"
@@ -112,6 +117,10 @@ buildtest:search-no-index-cache:
   retry: 2
   dependencies: []
   before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
     - "cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/ || :"
     - docker info
     - apk update
@@ -151,6 +160,7 @@ buildtest:search-no-index-cache:
     - heavy
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker pull $DOCKER_IMAGE
     - "cd magda-elastic-search; docker-compose up &; cd .."
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
     - sbt "intTest/testOnly au.csiro.data61.magda.crawler.*Spec au.csiro.data61.magda.indexer.*Spec au.csiro.data61.magda.spatial.*Spec"
