--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
       jdk: oraclejdk8
       services:
         - postgresql
+        - docker
       cache:
         directories:
           - $HOME/.ivy2/cache
@@ -24,7 +25,17 @@ matrix:
           - REACT_APP_SHA1=$TRAVIS_COMMIT
       addons:
         postgresql: "9.6"
-      script: travis_retry sbt test
+      before_install:
+        - docker info
+        - apk update
+        - apk upgrade
+        - apk add python python-dev py-pip build-base
+        - pip install docker-compose
+      script: 
+        - cd magda-elastic-search
+        - docker-compose up -d
+        - cd ..
+        - travis_retry sbt test
     - language: node_js
       node_js: "8"
       cache:
