travis pull docker image first

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ matrix:
       before_install:
         - docker info
         - composer --version
+        - docker pull docker.elastic.co/elasticsearch/elasticsearch:6.5.4
+        - docker ps -a
       script: 
         - cd magda-elastic-search
         - docker-compose up -d
