--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
         postgresql: "9.6"
       before_install:
         - docker info
-        - composer --version
+        - docker-compose --version
       script: 
         - cd magda-elastic-search
         - docker-compose up -d
