fixed waring from eslint: didn't specify react version

--- a/magda-web-client/.eslintrc
+++ b/magda-web-client/.eslintrc
@@ -3,5 +3,10 @@
     "plugins": ["prettier"],
     "rules": {
         "prettier/prettier": "error"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
