--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@craco/craco": "^3.6.0",
     "@magda/scripts": "^0.0.56-0",
+    "@magda/registry-aspects": "^0.0.56-0",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
