--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -51,8 +51,7 @@
     "retext": "^6.0.1",
     "retext-keywords": "^4.0.2",
     "source-map-explorer": "^1.7.0",
-    "urijs": "^1.19.1",
-    "worker-loader": "^2.0.0"
+    "urijs": "^1.19.1"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.54-0",
