--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -101,7 +101,7 @@
     "react-redux": "^5.0.7",
     "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "2.1.4",
     "react-table": "^6.5.1",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
