Added "isolatedModules": true option as it's required by Babel to build typescript

--- a/magda-web-client/tsconfig.json
+++ b/magda-web-client/tsconfig.json
@@ -2,5 +2,6 @@
     "extends": "./tsconfig-build.json",
     "compilerOptions": {
         "lib": ["dom", "dom.iterable", "esnext"]
-    }
+    },
+    "isolatedModules": true
 }
