Made dev refresh its certificate again.

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -20,7 +20,9 @@ ingress:
   hostname: dev.magda.io
   ingressClass: nginx
   enableTls: true
-  useDefaultCertificate: true
+  domains:
+    - dev.magda.io
+    - "*.dev.magda.io"
 
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
