--- a/magda-web-client/tsconfig-build.json
+++ b/magda-web-client/tsconfig-build.json
@@ -1,7 +1,7 @@
 {
     "extends": "../tsconfig-global.json",
     "compilerOptions": {
-        "declaration": true,
+        "declaration": false,
         "outDir": "dist",
         "target": "es2015",
         "allowJs": true,
