turn off "noEmitOnError"

--- a/magda-web-client/tsconfig-build.json
+++ b/magda-web-client/tsconfig-build.json
@@ -16,6 +16,7 @@
         "moduleResolution": "node",
         "declaration": false,
         "isolatedModules": true,
+        "noEmitOnError": false,
         "noImplicitAny": false
     },
     "include": ["src"]
