--- a/magda-elastic-search/package.json
+++ b/magda-elastic-search/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.54-0",
   "description": "MAGDA's custom elasticsearch docker image.",
   "scripts": {
-    "dev": "create-pod-and-forward --configuration ../deploy/kubernetes/local/base/elasticsearch.yml --selector component=elasticsearch --port 9300",
+    "dev": "docker-compose up",
+    "dev-stop": "docker-compose down",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
