--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,12 @@
   "lerna": "2.5.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": ["deploy/", "magda-*", "scripts/"],
-  "version": "0.0.54-0",
+  "packages": [
+    "deploy/",
+    "magda-*",
+    "scripts/"
+  ],
+  "version": "0.0.54-RC0",
   "hoist": [
     "tsmonad",
     "urijs",
@@ -24,7 +28,10 @@
   ],
   "command": {
     "docker-build-prod": {
-      "ignore": ["magda-authorization-db", "magda-authorization-api"]
+      "ignore": [
+        "magda-authorization-db",
+        "magda-authorization-api"
+      ]
     }
   }
 }
