Rewrote load tenants function. Added registryApi arg in gateway deployment.

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -63,6 +63,7 @@ spec:
             "--corsJson", "/etc/config/cors.json",
             "--web", "http://web",
             "--authorizationApi", "http://authorization-api/v0",
+            "--registryApi", "http://registry-api-full/v0",
             "--previewMap", "http://preview-map:6110",
         ]
         volumeMounts:
