--- a/magda-minion-visualization/package.json
+++ b/magda-minion-visualization/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/minion-visualization",
   "description": "MAGDA visualization Minion",
-  "version": "0.0.53-RC1",
+  "version": "0.0.54-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -15,7 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.53-RC1",
+    "@magda/scripts": "^0.0.54-0",
     "@types/node": "^7.0.5",
     "@types/papaparse": "^4.1.31",
     "@types/read-pkg-up": "^3.0.1",
@@ -24,9 +24,9 @@
     "typescript": "^3.2.0"
   },
   "dependencies": {
-    "@magda/minion-framework": "^0.0.53-RC1",
-    "@magda/registry-aspects": "^0.0.53-RC1",
-    "@magda/typescript-common": "^0.0.53-RC1",
+    "@magda/minion-framework": "^0.0.54-0",
+    "@magda/registry-aspects": "^0.0.54-0",
+    "@magda/typescript-common": "^0.0.54-0",
     "moment": "^2.19.1",
     "papaparse": "^4.3.6",
     "read-pkg-up": "^3.0.0",
