--- a/deploy/helm/magda/Chart.yaml
+++ b/deploy/helm/magda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: "magda"
 description: "A complete solution for managing, publishing and discovering government data, private and open."
-version: "0.0.53-RC1"
+version: "0.0.53"
 home: "https://github.com/TerriaJS/magda"
 sources: ["https://github.com/TerriaJS/magda"]
