--- a/magda-web-client/tsconfig.json
+++ b/magda-web-client/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig-build.json",
     "compilerOptions": {
         "lib": ["dom", "dom.iterable", "esnext"],
-        "isolatedModules": true
+        "isolatedModules": true,
+        "skipLibCheck": true
     }
 }
