Make indention to 2 spaces.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
         "**/bin": true,
         "magda-web-client/**/*.css": true
     },
-    "eslint.enable": true
+    "eslint.enable": true,
+    "editor.tabSize": 2,
+    "editor.detectIndentation": false
 }
