--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,5 @@
         "**/bin": true,
         "magda-web-client/**/*.css": true
     },
-    "eslint.enable": true,
-    "editor.tabSize": 2,
-    "editor.detectIndentation": false
+    "eslint.enable": true
 }
