Allowed set geo spatial data simplify tolerance ratio. Default 0.025 (2.5%) set 5% for STE regions Was 1%

--- a/magda-scala-common/src/main/resources/common.conf
+++ b/magda-scala-common/src/main/resources/common.conf
@@ -86,6 +86,7 @@ regionSources = {
 		nameField = "STE_NAME11"
         shortNameField = "STE_ABBREV"
 		order = 10
+        simplifyToleranceRatio = 0.05
 	}
 }
 
