--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -32,7 +32,7 @@ defaultRoutes:
     to: http://registry-api-read-only/v0
   registry-auth:
     to: http://registry-api/v0
-    auth: true
+    auth: false
   auth:
     to: http://authorization-api/v0/public
     auth: true
