Messed about with build.

--- a/magda-web-client/tsconfig.json
+++ b/magda-web-client/tsconfig.json
@@ -1,12 +1,3 @@
 {
-  "extends": "./tsconfig-build.json",
-  "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "isolatedModules": true,
-    "skipLibCheck": true
-  }
+    "extends": "./tsconfig-build.json"
 }
