--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -8,11 +8,11 @@
     "deploy-storybook": "build-storybook -c .storybook -o .out",
     "dev": "yarn run start",
     "prepare": "pancake",
-    "start": "react-scripts start",
-    "build": "pancake && react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start --react-scripts ../node_modules/react-scripts",
+    "build": "pancake && craco build --react-scripts ../node_modules/react-scripts",
+    "test": "craco test --react-scripts ../node_modules/react-scripts",
     "eject": "react-scripts eject",
-    "analyze": "source-map-explorer build/static/js/main.*"
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
     "@gov.au/accordion": "^7.0.7",
@@ -53,13 +53,14 @@
     "urijs": "^1.19.1"
   },
   "devDependencies": {
+    "@craco/craco": "^3.6.0",
     "@magda/scripts": "^0.0.54-0",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
     "@storybook/react": "^3.2.17",
-    "@types/react": "16.4.9",
     "@types/papaparse": "^4.5.7",
+    "@types/react": "16.4.9",
     "babel-core": "^6.26.0",
     "browser-detect": "^0.2.22",
     "d3-collection": "^1.0.4",
@@ -100,7 +101,7 @@
     "react-redux": "^5.0.7",
     "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.4",
+    "react-scripts": "^2.1.8",
     "react-table": "^6.5.1",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
