--- a/magda-web-client/tsconfig-build.json
+++ b/magda-web-client/tsconfig-build.json
@@ -2,8 +2,7 @@
     "extends": "../tsconfig-global.json",
     "compilerOptions": {
         "target": "es2015",
-        "allowJs": true,
-        "skipLibCheck": true,
+        "allowJs": false,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
@@ -11,12 +10,15 @@
         "module": "esnext",
         "resolveJsonModule": true,
         "noEmit": true,
+        "noEmitOnError": false,
         "jsx": "preserve",
         "moduleResolution": "node",
-        "isolatedModules": true,
         "noImplicitAny": false,
-        "sourceMap": false
+        "sourceMap": false,
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "isolatedModules": true,
+        "skipLibCheck": true
     },
-    "include": ["src"],
+    "include": ["src/**/*.ts"],
     "exclude": ["**/node_modules/**/*"]
 }
