--- a/magda-scala-common/src/main/resources/common.conf
+++ b/magda-scala-common/src/main/resources/common.conf
@@ -81,7 +81,7 @@ regionSources = {
 		order = 80
 	}
 	STE {
-		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/STE.geojson"
+		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/STE.simplified.geojson"
 		idField = "STE_CODE11"
 		nameField = "STE_NAME11"
         shortNameField = "STE_ABBREV"
