--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -47,6 +47,7 @@ defaultRoutes:
   apidocs:
     to: http://apidocs-server/
     redirectTrailingSlash: true
+  
 helmet: {}
 
 csp:
@@ -55,6 +56,9 @@ csp:
     scriptSrc:
     - "''self''"
     - "''unsafe-inline''"
+    - "*.terria.magda"
+    - "https://cdn.polyfill.io"
+    - "https://dev.virtualearth.net"
     - browser-update.org
     objectSrc:
     - "''none''"
