--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -74,7 +74,7 @@
     "@types/yargs": "^12.0.8",
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
-    "nock": "^9.0.14",
+    "nock": "git://github.com/magda-io/nock.git#master",
     "randomstring": "^1.1.5",
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
